workshop03/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: weather-app-deployment
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: weather-app-deployment
        version: v1
    spec:
      containers:
      - name: weatherappcontainer
        image: stackupiss/weather:v1
        imagePullPolicy: Always
        ports:
          - containerPort: 6000
