workshop03/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: weatherapp-ingress
  namespace: default
spec:
  selector:
    istio: ingressgateway #controller
  servers:
  - hosts: 
    - weatherapp.206.189.243.72.nip.io
    port:
      number: 80
      protocol: HTTP
      name: HTTP
