workshop03/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: weatherapp-vs
  namespace: default
spec:
  hosts:
    - "weatherapp.206.189.243.72.nip.io"
  gateways:
    - weatherapp-ingress
  http:
    - match:
        - uri:
            exact: /
      rewrite:
        uri: /weather
      route:
        - destination:
            host: weatherapp-svc
    - route:
        - destination:
            host: weatherapp-svc
